fix: getAllAccounts small changes.